Replaced @acm.uiuc.edu with @acm.illinois.edu. Would like someone more familiar to double check that the changes in apache and mailman don't break anything.  Everything else should just be text.
For anyone interested: ack -l '@acm.uiuc.edu' | xargs perl -pi -E 's/@acm.uiuc.edu/@acm.illinois.edu/g'

--- a/liquid/templates/banks/main.html
+++ b/liquid/templates/banks/main.html
@@ -4,6 +4,6 @@
 <h1>Banks of the Boneyard</h1>
 </header>
 <p>
-	Banks of the boneyard is the ACM monthy newsletter. More information coming soon. For questions email <a href="mailto:boneyard@acm.uiuc.edu">boneyard@acm.uiuc.edu</a>.
+	Banks of the boneyard is the ACM monthy newsletter. More information coming soon. For questions email <a href="mailto:boneyard@acm.illinois.edu">boneyard@acm.illinois.edu</a>.
 </p>
 {% endblock %}
