--- a/liquid/templates/conference/job-fair-login.html
+++ b/liquid/templates/conference/job-fair-login.html
@@ -15,7 +15,7 @@
                     We don't have the list of companies up yet, but check back mid-Summer for more information!</p>
                 <h2>For companies:</h2>
                 <p>Hey there! We are glad you are interested in our job fair! Registration for the job fair is done by invitation only.
-                    If you would like to be added to our waiting list, please  <a href="mailto:conference-chair@acm.uiuc.edu">email us</a>.</p>
+                    If you would like to be added to our waiting list, please  <a href="mailto:conference-chair@acm.illinois.edu">email us</a>.</p>
                 <div id="loginform">
                     <p>If you already received an invite, please enter the account credentials emailed to you by our staff to access the registration form.</p>
                     <form method="post" class="form-horizontal"  action="/conference/2013/jobfair">
