--- a/liquid/templates/conference/landing.html
+++ b/liquid/templates/conference/landing.html
@@ -69,7 +69,7 @@
 
 		<div class="row">
 		  <div class="social-links span12">
-			<a href="mailto:conference-chair@acm.uiuc.edu">Send us an Email</a>
+			<a href="mailto:conference-chair@acm.illinois.edu">Send us an Email</a>
 			&middot;
 			<a href="https://twitter.com/acmreflections">Follow us on Twitter</a>
 			&middot;
