--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -13,17 +13,17 @@
     
     <p><strong>Vice Chair</strong><br>
         Clare Curtis<br>
-       <a href="mailto:vice-chair@acm.uiuc.edu">vice-chair@acm.uiuc.edu</a>
+       <a href="mailto:vice-chair@acm.illinois.edu">vice-chair@acm.illinois.edu</a>
     </p>
     
     <p><strong>Treasurer</strong><br>
        Nikoli Dryden<br>
-       <a href="mailto:treasurer@acm.uiuc.edu">treasurer@acm.uiuc.edu</a>
+       <a href="mailto:treasurer@acm.illinois.edu">treasurer@acm.illinois.edu</a>
     </p>
     
     <p><strong>Secretary</strong><br>
        Brendan Ryan<br>
-       <a href="mailto:secretary@acm.uiuc.edu">secretary@acm.uiuc.edu</a>
+       <a href="mailto:secretary@acm.illinois.edu">secretary@acm.illinois.edu</a>
     </p>
     
     <p><strong>Cluster Admins</strong><br>
@@ -35,24 +35,24 @@
        Nathan Handler, 
        Calvin Shirley
        <br>
-       <a href="mailto:admin@acm.uiuc.edu">admin@acm.uiuc.edu</a>
+       <a href="mailto:admin@acm.illinois.edu">admin@acm.illinois.edu</a>
      </p>
 
      <p><strong>Corporate Committee</strong><br>
         Nikoli Dryden, Jicong Wang, 
         Nelson Osacky, Cole Gleason, 
         Nathan Handler<br>
-        <a href="mailto:corporate@acm.uiuc.edu">corporate@acm.uiuc.edu</a>
+        <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>
      </p>
      
      <p><strong>Social Chairs</strong><br>
         Clare Curtis, Matthew Dierker<br>
-        <a href="mailto:social@acm.uiuc.edu">social@acm.uiuc.edu</a>
+        <a href="mailto:social@acm.illinois.edu">social@acm.illinois.edu</a>
      </p>
      
      <p><strong>Banks Editor</strong><br>
         Brendan Ryan<br>
-        <a href="mailto:boneyard@acm.uiuc.edu">boneyard@acm.uiuc.edu</a>
+        <a href="mailto:boneyard@acm.illinois.edu">boneyard@acm.illinois.edu</a>
       </p>
 
   </div>
