--- a/liquid/templates/corporate/main.html
+++ b/liquid/templates/corporate/main.html
@@ -13,14 +13,14 @@
                 <p>Your advertisement will automatically be included in the next issue of ACM's weekly jobs e-mail newsletter. This newsletter reaches over 600 undergraduate and graduate students in Computer Science, Electrical and Computer Engineering, and related fields.</p>
                 <ul>
                     <li><a href="/corporate/job">Create new job ad</a></li>
-                    <li><a href="http://www.acm.uiuc.edu/archives/jobs-l/">Jobs mailing list archive</a></i>
+                    <li><a href="http://www.acm.illinois.edu/archives/jobs-l/">Jobs mailing list archive</a></i>
                 </ul>
             </section>
 
             <section>
                 <h2>Contact the ACM Corporate Committee</h2>
 
-                <p>The Corporate Committee is ACM's central point of contact for all corporate relations activities. Please e-mail <a href="mailto:corporate@acm.uiuc.edu">corporate@acm.uiuc.edu</a> rather than an individual student to ensure that your message is properly archived and visible to the entire Corporate Committee.</p>
+                <p>The Corporate Committee is ACM's central point of contact for all corporate relations activities. Please e-mail <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a> rather than an individual student to ensure that your message is properly archived and visible to the entire Corporate Committee.</p>
             </section>
         </div>
         <div class="span4">
@@ -36,7 +36,7 @@
                 </p>
                 <h4>Recruiters</h4>
                 <p>Want access to hundreds of resumes from some of the top students in the country?</p>
-                <p>If you would like access to the ACM@UIUC Resume Book please email <a href="mailto:corporate@acm.uiuc.edu">corporate@acm.uiuc.edu</a>.</p>
+                <p>If you would like access to the ACM@UIUC Resume Book please email <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>.</p>
                 <p>
                     <a href="/resume" class="btn btn-primary">Login</a>
                 </p>
