--- a/liquid/templates/corporate/resume/main.html
+++ b/liquid/templates/corporate/resume/main.html
@@ -8,12 +8,12 @@
   <div class="span7">
     <h3>Students</h3>
     <p>The ACM resume book is a packet of resumes provided to interested companies who contact ACM. To be included please fill in the information below.</p>
-    <p>If you have any questions <a href="mailto:corporate@acm.uiuc.edu">email us</a>.</p>
+    <p>If you have any questions <a href="mailto:corporate@acm.illinois.edu">email us</a>.</p>
     
   </div>
   <div class="span5">
     <h3>Recruiters</h3>
-    <p>If you would like access to the ACM@UIUC Resume Book please email <a href="mailto:corporate@acm.uiuc.edu">corporate@acm.uiuc.edu</a>.</p>
+    <p>If you would like access to the ACM@UIUC Resume Book please email <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>.</p>
   </div>
 </div>
 <div class="row">
