--- a/liquid/templates/corporate/resume/recruiter_help.html
+++ b/liquid/templates/corporate/resume/recruiter_help.html
@@ -3,12 +3,12 @@
 {% load bootstrap %}
 {% block recruiter_content %}
 <h3>How do I change my password or contact email address</h3>
-<p>You can change your password and email address in the account manager by pressing the account tab above. If you have any trouble don't hesitate to email <a href="mailto:corporate@acm.uiuc.edu">corporate@acm.uiuc.edu</a>.</p>
+<p>You can change your password and email address in the account manager by pressing the account tab above. If you have any trouble don't hesitate to email <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>.</p>
 <h3>How do I download the resume book?</h3>
 <p>To download the ACM@UIUC resume book, you must first create a download set. This is a filtered set of all the resumes available through our system. To create a download set, click the browse tab above and fill out the form to the filter parameters you wish to view and then click the blue 'create download' button. To create a download of all available resumes, just leave the form blank and click the 'create download' button, and you will get the full, unfiltered set.</p>
 <h3>How do I get new and updated resumes?</h3>
 <p>New or updated resumes are immediately available to you through this interface. For download sets that you have already created, you will see an alert that says <span class="label label-info">10 new or updated</span>. Under this download set you can choose to download all the resumes, including ones that you have previously downloaded, or only the new or updated ones.</p>
 <p>When creating a new download set, you will always be given the most up-to-date resumes available for each student.</p>
 <h3>Other questions</h3>
-<p>If you have any other questions, please email us at <a href="mailto:corporate@acm.uiuc.edu">corporate@acm.uiuc.edu</a>.</p>
+<p>If you have any other questions, please email us at <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>.</p>
 {% endblock %}
