--- a/liquid/templates/corporate/thanks.html
+++ b/liquid/templates/corporate/thanks.html
@@ -3,7 +3,7 @@
 <header class="page-header">
 <h1>Job Posting</h1>
 </header>
-<p>Thanks for submitting your job to ACM@UIUC. It will be included in the next weekly job email. The job mailing list archive is available <a href="http://www.acm.uiuc.edu/archives/jobs-l/">here</a>.</p>
+<p>Thanks for submitting your job to ACM@UIUC. It will be included in the next weekly job email. The job mailing list archive is available <a href="http://www.acm.illinois.edu/archives/jobs-l/">here</a>.</p>
 
-<p>If you have any questions feel free to contact <a href="mailto:corporate@acm.uiuc.edu">corporate@acm.uiuc.edu</a>.</p>
+<p>If you have any questions feel free to contact <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>.</p>
 {% endblock %}
