--- a/liquid/templates/vote/error.html
+++ b/liquid/templates/vote/error.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 <p>
-    There was an error. If you think this is a mistake please email <a href="mailto:top4@acm.uiuc.edu">top4@acm.uiuc.edu</a>.
+    There was an error. If you think this is a mistake please email <a href="mailto:top4@acm.illinois.edu">top4@acm.illinois.edu</a>.
 </p>
 {% endblock %}
