--- a/liquid/templates/corporate/resume/student_thanks.html
+++ b/liquid/templates/corporate/resume/student_thanks.html
@@ -4,6 +4,6 @@
 <header class="page-header">
 <h1>ACM@UIUC Resume Book</h1>
 </header>
-<p>Thanks for submitting your resume. If you have any questions please <a href="mailto:corporate@acm.uiuc.edu">email us</a>.</p>
+<p>Thanks for submitting your resume. If you have any questions please <a href="mailto:corporate@acm.illinois.edu">email us</a>.</p>
 <p>If you would like to upload a new resume or change any of your information, just resumbit this form at anytime.</p>
 {% endblock %}
