--- a/liquid/templates/vote/thanks.html
+++ b/liquid/templates/vote/thanks.html
@@ -6,6 +6,6 @@
     Vote: {{ vote }}
 </p>
 <p>
-    If there are any issues please email <a href="mailto:top4@acm.uiuc.edu">top4@acm.uiuc.edu</a>.
+    If there are any issues please email <a href="mailto:top4@acm.illinois.edu">top4@acm.illinois.edu</a>.
 </p>
 {% endblock %}
