--- a/liquid/templates/intranet/base.html
+++ b/liquid/templates/intranet/base.html
@@ -30,7 +30,7 @@
             <li{% if page == 'members' %} class='active'{% endif %}>
               <a href="/intranet/members">Member Database</a>
             </li>
-            {% if user.is_top4 or user.is_acm_admin %}
+            {% if user.is_admin %}
             <li{% if page == 'event' %} class='active'{% endif %}>
               <a href="/intranet/event">Event Manager</a>
             </li>
@@ -38,7 +38,7 @@
             <li{% if page == 'group' %} class='active'{% endif %}>
               <a href="/intranet/group">Group Manager</a>
             </li> 
-            {% if user.is_top4 or user.is_acm_admin %}
+            {% if user.is_top4 or user.is_acm_admin or is_corporate %}
             <li{% if page == 'jobs' %} class='active'{% endif %}>
               <a href="/intranet/jobs">Jobs Manager</a>
             </li> 
