Clarification on member benefits

--- a/liquid/templates/main.html
+++ b/liquid/templates/main.html
@@ -68,7 +68,7 @@
 <div class="row">
   <div class="span4">
     <h3>Join ACM</h3>
-    <p>As an ACM member you get access to our computer clusters, free unlimited printing, Acoustics, Caffeine, and many other member perks.</p>
+    <p>As an ACM member you get access to our computer network, free black and white printing, Acoustics, Caffeine, and many other member perks.</p>
     <p><a class="btn" href="/about/join">Join now &raquo;</a></p>
   </div>
 
