Changed some variables from camelCase to under_score; added posted-by feature

--- a/liquid/templates/intranet/quote/add.html
+++ b/liquid/templates/intranet/quote/add.html
@@ -34,6 +34,8 @@ $(document).ready(function() {
         {id: "{{m.username}}", name: "{{m.full_name_and_netid}}"},
         {% endfor %}
     ],{
+        allowCustomEntry:true,
+        allowFreeTagging:true,
         preventDuplicates:true
     });
 });
