--- a/liquid/templates/intranet/quote/edit.html
+++ b/liquid/templates/intranet/quote/edit.html
@@ -36,6 +36,8 @@ $(document).ready(function() {
         {% endfor %}
     ],
     {
+        allowCustomEntry:true,
+        allowFreeTagging:true,
         preventDuplicates:true,
         prePopulate:
         [
