--- a/liquid/templates/intranet/quote/main.html
+++ b/liquid/templates/intranet/quote/main.html
@@ -38,7 +38,7 @@
             <br />
             <br />
             <div class="quote span8" style="padding-left:55px; color: #888888; text-align: right">
-                {% autoescape off %}{{ q.quote_source_html }}{% endautoescape %}, {{ q.created_at }}
+                {% autoescape off %}{{ q.quote_source_html }}{{ q.quote_poster_html }}{% endautoescape %}, {{ q.created_at }}
                 {% if q.canEdit %}
                     | <a href="edit/{{ q.id }}">Edit/Delete</a>
                 {% endif %}
