loaded markdown.js in files

--- a/liquid/templates/banks/form.html
+++ b/liquid/templates/banks/form.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 
 {% block top_styles %}
-{% endblock %}
-
-{% block bottom_scripts %}
+    <link rel="stylesheet" href="/static/css/banks.css"/>
 {% endblock %}
 
 {% block content %}
@@ -22,4 +20,8 @@
     </div>
   </div>
 </form>
+{% endblock %}
+
+{% block bottom_scripts %}
+    <script type="text/javascript" src="/static/js/markdown.js"></script>
 {% endblock %}
