created banks.js and included in banks forms

--- a/liquid/templates/banks/form.html
+++ b/liquid/templates/banks/form.html
@@ -24,4 +24,6 @@
 
 {% block bottom_scripts %}
     <script type="text/javascript" src="/static/js/markdown.js"></script>
+    <script type="text/javascript" src="/static/js/banks.js"></script>
+
 {% endblock %}
