fixed typo and print messiness

--- a/liquid/templates/banks/form.html
+++ b/liquid/templates/banks/form.html
@@ -13,7 +13,7 @@
 
 <section class="post post-preview">
     <header>
-        <h1 id="post-title-preview" class="post-title">Post Titlte</h1>
+        <h1 id="post-title-preview" class="post-title">Post Title</h1>
     </header>
     <section id="post-content-preview" class="post-body">Post Body</section>
 </section>
