A few minor tweaks (suggested by Reed and Brendan)

--- a/liquid/static/css/link-hider.css
+++ b/liquid/static/css/link-hider.css
@@ -1,22 +1,4 @@
-a.no-decoration
-{
-   text-decoration:none;
-   color:inherit;
-}
-
-a.no-decoration:hover
-{
-   text-decoration:none;
-   color:inherit;
-}
-
-a.no-decoration:active
-{
-   text-decoration:none;
-   color:inherit;
-}
-
-a.no-decoration:visited
+a.no-decoration, a.no-decoration:hover, a.no-decoration:active, a.no-decoration:visited
 {
    text-decoration:none;
    color:inherit;
