Apparently this matters: the calendar script or its import must be in the *bottom_scripts* block within the templates.

--- a/liquid/templates/cal/main.html
+++ b/liquid/templates/cal/main.html
@@ -7,3 +7,7 @@
 {% include "cal/make_calendar_template.html" %}
 
 {% endblock %}
+
+{% block bottom_scripts %}
+<script src="/static/js/make-calendar-scripts.js"></script>
+{% endblock %}
