Fixed the outdated e-Lock url per Calvin's instructions.

--- a/liquid/templates/kiosk/main.html
+++ b/liquid/templates/kiosk/main.html
@@ -5,7 +5,7 @@
    <div class="span4">
       <h3>eLock Access</h3>
       <p>Request 24/7 access to Siebel and the ACM office.</p>
-      <a class="btn" href="http://stela.cs.illinois.edu">Request Access &raquo;</a>
+      <a class="btn" href="http://go.illinois.edu/elock">Request Access &raquo;</a>
    </div>
    <div class="span4">
       <h3>Join ACM@UIUC</h3>
