--- a/liquid/templates/intranet/resume_manager/main.html
+++ b/liquid/templates/intranet/resume_manager/main.html
@@ -15,6 +15,9 @@
   <li class="pull-right">
     <a href="/corporate/resume/recruiter">Browse</a>
   </li>
+  <li class="pull-right">
+    <a href="/intranet/resume/reminder">Send reminders</a>
+  </li>
 </ul>
 
 {% if resume_count %}
