--- a/liquid/templates/intranet/resume_manager/resume_reminder.html
+++ b/liquid/templates/intranet/resume_manager/resume_reminder.html
@@ -19,7 +19,7 @@
   </p>
 
   <button type="submit" class="btn btn-primary">Send reminders</button>
-  <a href="/intranet/resume/" class="btn btn-secondary">Resume manager</a>
+  <a href="{% url intranet.resume_manager.views.main %}" class="btn btn-secondary">Resume manager</a>
   
 </form>
 
