Made a minor formatting change to resume_reminder.html

--- a/liquid/templates/intranet/resume_manager/emails/resume_reminder.html
+++ b/liquid/templates/intranet/resume_manager/emails/resume_reminder.html
@@ -5,4 +5,4 @@
 <p>If you would like to unsubscribe from these notifications, click <a href='{{ unsubscribe_url }}'>here</a>.</p>
                      
 <p>Thanks,<br />
-<p>The ACM@UIUC Corporate Committee.</p>
+The ACM@UIUC Corporate Committee.</p>
