--- a/liquid/templates/corporate/resume/student_referred.html
+++ b/liquid/templates/corporate/resume/student_referred.html
@@ -39,7 +39,7 @@
   <div class="span6">
       <div class="resume-image-loader resume-referred-preview">
          <div class="well resume-referred-preview">
-            <img src="/intranet/resume/thumb/{{ resume_id }}.png">
+            <img src="/corporate/resume/student/thumb/{{ resume_id }}.png">
          </div>
       </div>
   </div>
