added conference updates

--- a/liquid/templates/conference/landing.html
+++ b/liquid/templates/conference/landing.html
@@ -11,11 +11,11 @@
 	  <div class="row">
 		<div class="span12">
 		  <div id="save-the-date">
-			<h2>October 10 - 13, 2013</h2>
+			<h2>September 25 - 28, 2014</h2>
               <hr />
 			<p>Reflections | Projections, the annual computing conference at the 
 			  <a href="http://illinois.edu">University of Illinois Urbana-Champaign,</a> 
-			  will be returning this October! Come hear exciting speakers from across industry and academia! Look for a career at our CS/ECE job fair, or if you are more interested in the startup world, our new Startup Fair! In a competitive mood? Participate in MechMania, a 24-hour programming competition, or <a href="http://puzzlebang.com">PuzzleBang</a>!, a fun series of puzzles! </p>
+			  will be returning this September! Come hear exciting speakers from across industry and academia! Look for a career at our CS/ECE job fair or, if you are more interested in the startup world, our Startup Fair! In a competitive mood? Participate in MechMania, a 24-hour programming competition! </p>
               <br />
               <p>Interested in attending? The conference is free and open to all, but please
                   pre-register to receive a free t-shirt!</p>
