--- a/liquid/templates/conf.html
+++ b/liquid/templates/conf.html
@@ -4,13 +4,13 @@
 <img src="/static/img/conference/header-logo.png" />
 </header>
 <p>
-  Eighteen years ago, the student chapter of the Association for Computing Machinery at the University of Illinois (ACM@UIUC) held its first computing conference. 150 students from across the midwest attended the event, which was supported by 14 corporations.
+  Nineteen years ago, the student chapter of the Association for Computing Machinery at the University of Illinois (ACM@UIUC) held its first computing conference. 150 students from across the midwest attended the event, which was supported by 14 corporations.
 </p>
 <p>
-  Since its beginning, the conference has grown to include the MechMania programming contest and a job fair. This year, we're proud to welcome you to the 19th annual conference from October 10-13, 2013, at the Urbana-Champaign campus. We expect to have over 700 student attendees and 25 corporate sponsors.
+  Since its beginning, the conference has grown to include the MechMania programming contest and a job fair. This year, we're proud to welcome you to the 20th annual conference from September 25-28, 2014, at the Urbana-Champaign campus. We expect to have over 700 student attendees and more than 25 corporate sponsors.
 </p>
 <p>
   ACM could not host Reflections | Projections without the generous support of our sponsors. Their donations fund all the events and help keep student fees low.
 </p>
-<p>For more information, please visit the website: <a href="/conference/">http://www.acm.uiuc.edu/conference/</a>.</p>
+<p>For more information, please visit the website: <a href="/conference/2014">http://www.acm.uiuc.edu/conference/2014</a>.</p>
 {% endblock %}
