--- a/liquid/templates/conf.html
+++ b/liquid/templates/conf.html
@@ -12,5 +12,5 @@
 <p>
   ACM could not host Reflections | Projections without the generous support of our sponsors. Their donations fund all the events and help keep student fees low.
 </p>
-<p>For more information, please visit the website: <a href="/conference/2014">http://www.acm.uiuc.edu/conference/2014</a>.</p>
+<p>For more information, please visit the website: <a href="/conference">http://www.acm.uiuc.edu/conference</a>.</p>
 {% endblock %}
