--- a/liquid/templates/registration/login.html
+++ b/liquid/templates/registration/login.html
@@ -15,12 +15,7 @@
   </form>
 </div>
 <div class="span6">
-  <p>Your username is your netid. Your password is your LDAP password.</p>
-  
-  <p>Don't have an LDAP password? Run this from a Linux cluster machine: 
-  <code>/afs/acm.uiuc.edu/admin/scripts/set-ldap-password</code> </p>
-  
-  <p>Don't have a cluster account? Email <a href="mailto:admin@acm.illinois.edu">admin@acm.illinois.edu</a></p>
+  <p>Your username is your netid. Your password is your Campus Active Directory password.</p>
 </div>
 </div>
 {% endblock %}
