--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -7,22 +7,22 @@
   <div class="span6">
     <h2>Contacts</h2>
     <p><strong>Chair</strong><br>
-        Robert Pieta<br>
+        Cole Gleason<br>
         <a href="mailto:acm@illinois.edu">acm@illinois.edu</a>
     </p>
     
     <p><strong>Vice Chair</strong><br>
-        Clare Curtis<br>
+        Matthew Dierker<br>
        <a href="mailto:vice-chair@acm.illinois.edu">vice-chair@acm.illinois.edu</a>
     </p>
     
     <p><strong>Treasurer</strong><br>
-       Nikoli Dryden<br>
+       Austin Walters<br>
        <a href="mailto:treasurer@acm.illinois.edu">treasurer@acm.illinois.edu</a>
     </p>
     
     <p><strong>Secretary</strong><br>
-       Brendan Ryan<br>
+       Eva Shih<br>
        <a href="mailto:secretary@acm.illinois.edu">secretary@acm.illinois.edu</a>
     </p>
     
