More updates to contact page

--- a/liquid/templates/contact.html
+++ b/liquid/templates/contact.html
@@ -26,14 +26,14 @@
        <a href="mailto:secretary@acm.illinois.edu">secretary@acm.illinois.edu</a>
     </p>
     
-    <p><strong>Cluster Admins</strong><br>
-       Dylan Nugent, 
-       Josh Ginsburg, 
-       Sam Laane, 
-       Cole Gleason, 
-       Matthew Dierker, 
-       Nathan Handler, 
-       Calvin Shirley
+    <p><strong>System Administrators</strong><br>
+       Calvin Shirley,
+       Dylan Nugent,
+       Nathan Handler,
+       Josh Ginsburg,
+       Adam Madsen,
+       Eric Sauer,
+       Milan Dasgupta
        <br>
        <a href="mailto:admin@acm.illinois.edu">admin@acm.illinois.edu</a>
      </p>
@@ -41,7 +41,8 @@
      <p><strong>Corporate Committee</strong><br>
         Nikoli Dryden, Jicong Wang, 
         Nelson Osacky, Cole Gleason, 
-        Nathan Handler<br>
+        Nathan Handler, Clare Curtis,
+        Calvin Shirley<br>
         <a href="mailto:corporate@acm.illinois.edu">corporate@acm.illinois.edu</a>
      </p>
      
@@ -51,7 +52,7 @@
      </p>
      
      <p><strong>Banks Editor</strong><br>
-        Brendan Ryan<br>
+        Eva Shih<br>
         <a href="mailto:boneyard@acm.illinois.edu">boneyard@acm.illinois.edu</a>
       </p>
 
