--- a/liquid/templates/about/join.html
+++ b/liquid/templates/about/join.html
@@ -9,7 +9,7 @@
 {% if not user.is_anonymous %}
 <p>You're already a member of ACM.</p>
 
-<p>Looking to get involved with ACM? Check out the <a href="{% url sigs.views.main %}">SIG list</a> or the <a href="{% url views.conference %}">Conference page</a>.</p>
+<p>Looking to get involved with ACM? Check out the <a href="{% url sigs.views.main %}">SIG list</a> or the <a href="{% url conference_main %}">Conference page</a>.</p>
 
 {% else %}
 <p>If you are interested in getting involved with ACM, the best way is to start showing up at events. There are many events every week, and you do not need to be a member to attend. Also, note that ACM, its executive board, and all of its SIGs have mailing lists. Mailing lists are a great way to stay informed on what ACM and SIGs are doing.</p>
