getting jobfair ready for 2014

--- a/liquid/templates/conference/job-fair-invite.html
+++ b/liquid/templates/conference/job-fair-invite.html
@@ -6,11 +6,11 @@
 	<div id="job-fair-form">
         <img class="header-logo" src="/static/img/conference/header-logo.png" />
         {% if company.type == JOBFAIR %}
-            <a name="form924658039" id="formAnchor924658039"></a>
-            <script type="text/javascript" src="http://fs6.formsite.com/include/form/embedManager.js?924658039"></script>
+            <a name="form1570856351" id="formAnchor1570856351"></a>
+            <script type="text/javascript" src="http://fs6.formsite.com/include/form/embedManager.js?1570856351"></script>
             <script type="text/javascript">
                 EmbedManager.embed({
-                    key: "http://fs6.formsite.com/res/showFormEmbed?EParam=0f3EXAbWkRyOWvWrn2%2FGgrUJubCHM1KR&924658039",
+                    key: "http://fs6.formsite.com/res/showFormEmbed?EParam=0f3EXAbWkRyOWvWrn2%2FGghGOwQgdGLHi&1570856351",
                     width: "100%"
                 });
             </script>
