--- a/liquid/templates/conference/job-fair-login.html
+++ b/liquid/templates/conference/job-fair-login.html
@@ -17,12 +17,12 @@
                 <p>Hey there! We are glad you are interested in our job fair! Registration for the job fair is done by invitation only.
                     If you would like to be added to our waiting list, please  <a href="mailto:conference-chair@acm.illinois.edu">email us</a>.</p>
                 <div id="loginform">
-                    <p>If you already received an invite, please enter the account credentials emailed to you by our staff to access the registration form.</p>
-                    <form method="post" class="form-horizontal"  action="/conference/2013/jobfair">
+                    <p>If you have already received an invite, please enter the account credentials emailed to you by our staff to access the registration form.</p>
+                    <form method="post" class="form-horizontal"  action="/conference/2014/jobfair">
                         {% csrf_token %}
                         {{  form|bootstrap  }}
                         <button type="submit" class="btn-primary">Login</button>
-                        <input type="hidden" name="next" value="/conference/2013/jobfair" />
+                        <input type="hidden" name="next" value="/conference/2014/jobfair" />
                     </form>
                 </div>
             </div>
